deploy: 422c1cf80d50ecf52326d4ba1669d317356bc1e3

--- a/2026-02-21.md
+++ b/2026-02-21.md
@@ -1,6 +1,6 @@
 # 📰 InfoHound - 2026年2月21日星期六
 
-> 今日精选 3 篇文章，预计阅读时间 5 分钟
+> 今日精选 2 篇文章，预计阅读时间 3 分钟
 
 ---
 
@@ -9,20 +9,20 @@
 ### Turn Dependabot Off
 **来源**: Lobste.rs | **评分**: 8.3/10 🟡
 
-**为什么重要**: Dependabot's false-positive-heavy alerts create alert fatigue that actually reduces security by drowning real vulnerabilities in noise, while better alternatives like govulncheck use static analysis to only flag genuinely reachable vulnerabilities.
+**为什么重要**: Dependabot's high false-positive rate creates alert fatigue that wastes engineering time and actually degrades security posture by drowning out real threats, while better alternatives exist that use Go's rich vulnerability metadata for precise, actionable alerts.
 
-**一句话总结**: The author argues Dependabot should be replaced with govulncheck and scheduled CI tests against latest dependencies to eliminate false positives and enable meaningful security triage.
+**一句话总结**: The author argues Dependabot should be replaced with govulncheck for security scanning and scheduled CI runs against latest dependencies, because Dependabot's crude module-level matching generates thousands of irrelevant PRs while missing the actual attack surface analysis.
 
 **关键要点**:
-• Dependabot generated thousands of PRs for a filippo.io/edwards25519 vulnerability affecting only the unused (*Point).MultiScalarMult method, even flagging repos like Wycheproof that only imported the unaffected field subpackage
-• The Go Vulnerability Database includes rich metadata (version, package, symbol) enabling precise filtering; govulncheck uses static analysis to determine if vulnerable code is actually reachable, returning 'No vulnerabilities found' when the symbol isn't called
-• Alert fatigue from false positives causes teams to treat all alerts as routine dependency bumps, preventing proper impact assessment (production updates, secret rotation, user notification) for real vulnerabilities
-• Scheduled CI running 'go get -u -t ./...' before tests captures breakage detection benefits without forcing immediate updates, letting teams control when to actually bump dependencies
-• Noisy scanners externalize costs to open source maintainers who receive spurious update demands; the author, as former Go Security Team lead, invested in govulncheck specifically to solve this systemic problem
+• Dependabot opened thousands of PRs for a filippo.io/edwards25519 vulnerability affecting only the unused `(*Point).MultiScalarMult` method, even flagging repos like Wycheproof that only imported the unaffected `field` subpackage
+• The Go Vulnerability Database contains symbol-level metadata (package, function, version) that enables precise filtering—govulncheck uses static analysis to determine if vulnerable code is actually reachable, reporting 'Your code is affected by 0 vulnerabilities' when the symbol isn't called
+• Alert fatigue from false positives causes teams to treat all security alerts as routine dependency bumps, preventing proper impact assessment (secrets rotation, user notification, production updates) for genuine vulnerabilities
+• Dependency freshness can be achieved without constant PR noise by running CI daily with `go get -u -t ./...` before tests—this catches breakage early without forcing updates, and reduces risk by avoiding rushed refactors when security patches are needed
+• The author, former Go Security Team lead, notes this was the motivation for building the Go Vulnerability Database and govulncheck in 2020–2021 to solve the exact problem Dependabot ignores
 
-**背景**: Dependabot is GitHub's automated dependency update tool that scans for security vulnerabilities and opens PRs to update affected packages. The Go ecosystem has a specialized vulnerability database and govulncheck tool developed by the Go Security Team that performs deeper static analysis than generic scanners.
+**背景**: Dependabot is GitHub's automated dependency update tool that monitors for vulnerabilities and opens PRs to update affected packages. The Go ecosystem has unique advantages for precise vulnerability detection because the Go Vulnerability Database (maintained by the Go security team) includes rich metadata about which specific functions/symbols are vulnerable, not just which module versions.
 
-**标签**: Security, Go, DevOps, Supply Chain
+**标签**: Security, Go, DevOps, Dependency Management
 
 [阅读原文](https://words.filippo.io/dependabot/)
 
@@ -32,28 +32,16 @@
 ## 🔥 深度技术
 
 ### 🟡 I found a Vulnerability. They found a Lawyer
-**来源**: Hacker News | **评分**: 7.5/10
+**来源**: Hacker News | **评分**: 7.0/10
 
-**为什么重要**: This case exposes how organizations often punish rather than reward security researchers, revealing systemic failures in vulnerability disclosure culture that ultimately leaves user data—including children's—at risk.
+**为什么重要**: This case exemplifies how organizations weaponize legal threats against security researchers practicing responsible disclosure, chilling future vulnerability reporting and leaving critical flaws unpatched.
 
 **要点**:
-• The vulnerability was trivial: incrementing numeric user IDs (XXXXXX0, XXXXXXX1, etc.) combined with a static default password never enforced to be changed, allowing access to full profiles including 14-year-old students' names, addresses, emails, and phone numbers with no rate limiting, lockouts, or MFA.
-• The researcher followed Malta's National Coordinated Vulnerability Disclosure Policy by reporting to both CSIRT Malta and the organization directly with a 30-day embargo, offering technical assistance and receiving a legal threat in return.
-• The organization's law firm explicitly criticized the researcher for 'notifying the authorities prior to contacting the Group' and threatened criminal prosecution under Maltese law for the 'threat to make this matter public.'
+• The vulnerability was trivially exploitable: incrementing numeric user IDs (XXXXXX0, XXXXXX1, etc.) combined with a static default password never forced to be changed, with no rate limiting, lockouts, or MFA.
+• Exposed data included full personal profiles of underage students: names, addresses, phone numbers, emails, dates of birth—verified for a 14-year-old whose account was accessible with just a guessed number and default password.
+• The researcher followed Malta's National Coordinated Vulnerability Disclosure Policy exactly, notifying both CSIRT Malta and the organization with a 30-day embargo.
 
 [阅读原文](https://dixken.de/blog/i-found-a-vulnerability-they-found-a-lawyer)
-
-### 🟡 Brat, a parallel TAP testing harness for the POSIX shell
-**来源**: Lobste.rs | **评分**: 7.0/10
-
-**为什么重要**: Brat solves the common pain point of slow shell test suites by offering built-in parallel execution without external dependencies, while remaining readable enough to understand in an afternoon.
-
-**要点**:
-• Zero dependencies: Runs on POSIX.1-2024 with only shell and awk, tested on Alpine (busybox), Debian (dash/mawk), Fedora (bash/gawk), FreeBSD, and macOS
-• Built-in parallel execution via -j flag or $BRAT_JOBS environment variable, using FIFOs instead of requiring GNU parallel
-• Different output model from Bats: captures to $stdout/$stderr file paths rather than $output/$lines strings, avoiding memory overhead with large outputs
-
-[阅读原文](https://codeberg.org/sstephenson/brat)
 
 
 ---
@@ -62,9 +50,9 @@
 
 | 指标 | 数值 |
 |------|------|
-| 文章总数 | 3 篇 |
-| 平均质量分 | 7.6/10 |
-| 预计阅读时间 | 5 分钟 |
+| 文章总数 | 2 篇 |
+| 平均质量分 | 7.7/10 |
+| 预计阅读时间 | 3 分钟 |
 
 ---
 
