deploy: c35613830e5f5c5260ec336b85a11646a7cf170f

--- a/2026-02-27.md
+++ b/2026-02-27.md
@@ -6,42 +6,42 @@
 
 ## 🌟 头条
 
-### Statement from Dario Amodei on Our Discussions with the Department of War
-**来源**: Hacker News | **评分**: 7.5/10 🔴
+### What Claude Code Chooses
+**来源**: Hacker News | **评分**: 8.3/10 🟡
 
-**为什么重要**: This reveals a high-stakes confrontation between a leading AI company and the US military over ethical boundaries, with potential precedent-setting implications for how AI firms navigate national security demands versus democratic values.
+**为什么重要**: This reveals how AI coding assistants are quietly reshaping developer tool adoption by defaulting to custom-built solutions over established vendors, creating a new 'invisible' stack that could disrupt SaaS markets.
 
-**一句话总结**: Anthropic's CEO Dario Amodei announces the company is refusing Department of War demands to remove safeguards against mass domestic surveillance and fully autonomous weapons, despite threats of contract termination, 'supply chain risk' designation, and Defense Production Act invocation.
+**一句话总结**: Claude Code prefers building custom solutions over buying tools in 12 of 20 categories, but when it does recommend tools, it creates near-monopolies for GitHub Actions (94%), Stripe (91%), and shadcn/ui (90%).
 
 **关键要点**:
-• Anthropic was first frontier AI company to deploy in classified US government networks, National Laboratories, and provide custom national security models; Claude is already used for intelligence analysis, modeling/simulation, operational planning, and cyber operations
-• Company previously sacrificed 'several hundred million dollars in revenue' to cut off CCP-linked firms and shut down Chinese state-sponsored cyberattacks using Claude
-• Two non-negotiable exceptions: (1) mass domestic surveillance—AI can assemble scattered data into comprehensive life profiles at scale, exploiting legal gaps around warrantless data purchases; (2) fully autonomous weapons—current AI reliability insufficient, risking warfighter and civilian lives, with offered R&D collaboration rejected by DoW
-• DoW threats are contradictory: simultaneously labeling Anthropic a 'supply chain risk' (reserved for US adversaries, unprecedented for American company) while treating Claude as essential enough to invoke Defense Production Act
-• Anthropic will facilitate smooth transition to another provider if offboarded, maintaining models on proposed terms during transition
+• Build vs. buy split: 252 total 'Custom/DIY' picks—more than any individual tool—including hand-rolled feature flags with env vars instead of LaunchDarkly, and JWT+bcrypt auth instead of Auth0
+• Near-monopoly tools: GitHub Actions 93.8% (152/162), Stripe 91.4% (64/70), shadcn/ui 90.1% (64/71), Vercel 100% for JS deployments
+• Invisible incumbents: Express got 0/119 primary picks, Redux 0/88, Jest only 7/171 (4%), AWS/GCP/Azure zero primary deployment picks in any stack
+• Model recency gradient: Opus 4.6 picks Drizzle 100% vs. Sonnet 4.5's Prisma 79%; Celery drops from 100% to 0% across Python job picks
+• Deployment stack lock-in: Vercel owns JS (100%), Railway owns Python (82%)—traditional cloud providers barely mentioned as alternatives
 
-**背景**: Published February 26, 2026, this statement comes amid intensifying US-China AI competition and ongoing policy debates about AI governance, military adoption, and the appropriate role of private companies in setting ethical limits on government use of their technology. The 'Department of War' reference appears to be a deliberate or stylized framing of the Department of Defense.
+**背景**: StudyEdwin analyzed 2,430 Claude Code responses across 3 models (Sonnet 4.5, Opus 4.5, Opus 4.6) and 4 project types, using open-ended prompts without tool names to observe natural tool selection behavior.
 
-**标签**: AI, AI Safety, National Security, AI Ethics
+**标签**: AI, Developer Tools, Stack Decisions, Claude
 
-[阅读原文](https://www.anthropic.com/news/statement-department-of-war)
+[阅读原文](https://amplifying.ai/research/claude-code-picks)
 
 
 ---
 
 ## 🔥 深度技术
 
-### 🟡 Git in Postgres
-**来源**: Lobste.rs | **评分**: 7.2/10
+### 🟡 How my side project got banned from the internet
+**来源**: Lobste.rs | **评分**: 7.4/10
 
-**为什么重要**: This article proposes a fundamental rearchitecture of how code forges work, replacing the filesystem/git-binary split with a unified Postgres backend—potentially enabling simpler self-hosted deployments that could accelerate the federation and decentralization of open source hosting.
+**为什么重要**: This article exposes how fragile web reputation systems are and how a single false positive can cascade across 10+ security vendors, potentially destroying businesses that depend on web traffic.
 
 **要点**:
-• Multiple package managers (Cargo, Homebrew, Go, CocoaPods) hit scaling limits using git as a database, with Homebrew 4.0 switching from git clones to JSON downloads after GitHub explicitly asked them to stop due to repository size.
-• The git data model collapses to just two Postgres tables: objects (content-addressed by SHA1) and refs (named pointers with compare-and-swap updates), implemented in ~2,000 lines of C as libgit2 backends.
-• A practical demo query joins commit messages against Forgejo's issue tracker in a single SQL statement—something that currently requires shelling out to git log and pattern-matching in application code.
+• Google Safe Browsing cleared the flag in 2 hours, but 9 other vendors had already replicated it—demonstrating how security databases propagate errors virally without verification
+• Vendor resolution times varied dramatically: CRDF (1 day), BitDefender (3 days), alphaMountain.ai/Fortinet (4 days), CyRadar (6 days), Seclookup (8 days), Gridinsoft (16 days), with ESET and Lionic never responding
+• The root cause was a 302 temporary redirect (engramma.dev → app.engramma.dev) combined with a newly registered domain—a pattern security systems associate with malicious actors
 
-[阅读原文](https://nesbitt.io/2026/02/26/git-in-postgres.html)
+[阅读原文](https://trysound.io/how-my-side-project-got-banned-from-the-internet/)
 
 
 ---
@@ -51,7 +51,7 @@
 | 指标 | 数值 |
 |------|------|
 | 文章总数 | 2 篇 |
-| 平均质量分 | 7.3/10 |
+| 平均质量分 | 7.9/10 |
 | 预计阅读时间 | 3 分钟 |
 
 ---
