deploy: 0c7a1a9d9d3603bbe2a00f960fb862fd9707035e

--- a/2026-02-27.md
+++ b/2026-02-27.md
@@ -1,28 +1,28 @@
 # 📰 InfoHound - 2026年2月27日星期五
 
-> 今日精选 2 篇文章，预计阅读时间 3 分钟
+> 今日精选 4 篇文章，预计阅读时间 6 分钟
 
 ---
 
 ## 🌟 头条
 
-### What Claude Code Chooses
+### What Claude Code chooses
 **来源**: Hacker News | **评分**: 8.3/10 🟡
 
-**为什么重要**: This reveals how AI coding assistants are quietly reshaping developer tool adoption by defaulting to custom-built solutions over established vendors, creating a new 'invisible' stack that could disrupt SaaS markets.
+**为什么重要**: As AI coding assistants become the primary interface for developer decisions, understanding Claude Code's tool preferences reveals which technologies will dominate future codebases regardless of current market share.
 
-**一句话总结**: Claude Code prefers building custom solutions over buying tools in 12 of 20 categories, but when it does recommend tools, it creates near-monopolies for GitHub Actions (94%), Stripe (91%), and shadcn/ui (90%).
+**一句话总结**: Claude Code overwhelmingly prefers building custom solutions over buying tools in 12 of 20 categories, but when it does recommend tools, it creates near-monopolies for GitHub Actions (94%), Stripe (91%), and shadcn/ui (90%).
 
 **关键要点**:
-• Build vs. buy split: 252 total 'Custom/DIY' picks—more than any individual tool—including hand-rolled feature flags with env vars instead of LaunchDarkly, and JWT+bcrypt auth instead of Auth0
-• Near-monopoly tools: GitHub Actions 93.8% (152/162), Stripe 91.4% (64/70), shadcn/ui 90.1% (64/71), Vercel 100% for JS deployments
-• Invisible incumbents: Express got 0/119 primary picks, Redux 0/88, Jest only 7/171 (4%), AWS/GCP/Azure zero primary deployment picks in any stack
-• Model recency gradient: Opus 4.6 picks Drizzle 100% vs. Sonnet 4.5's Prisma 79%; Celery drops from 100% to 0% across Python job picks
-• Deployment stack lock-in: Vercel owns JS (100%), Railway owns Python (82%)—traditional cloud providers barely mentioned as alternatives
+• Build vs. buy: Custom/DIY was the most common choice across 252 total picks, including 69% for feature flags (config files + env vars), 100% for Python authentication (JWT + passlib), and 22% for observability
+• Near-monopoly tools: GitHub Actions 93.8% (152/162), Stripe 91.4% (64/70), shadcn/ui 90.1% (64/71), Vercel 100% (86/86 JS picks) — when Claude picks, it picks decisively
+• Model divergence: Sonnet 4.5 favors established tools (Prisma 79%, Celery 100%), while Opus 4.6 is forward-looking (Drizzle 100%, 0% Prisma, 11.4% custom builds) — showing recency gradient where newer models pick newer tools
+• Invisible incumbents: AWS/GCP/Azure received zero primary deployment picks despite market dominance; Express was entirely absent (0/119); Redux and Jest functionally deprecated with 0 primary picks each
+• Deployment split by stack: 100% Vercel for JS frontend, 82% Railway for Python backend — traditional cloud providers reduced to alternative mentions with minimal reasoning
 
-**背景**: StudyEdwin analyzed 2,430 Claude Code responses across 3 models (Sonnet 4.5, Opus 4.5, Opus 4.6) and 4 project types, using open-ended prompts without tool names to observe natural tool selection behavior.
+**背景**: StudyEdwin benchmarked Claude Code v2.1.39 across 2,430 prompts using Sonnet 4.5, Opus 4.5, and Opus 4.6 on real repositories with open-ended questions and no tool names in prompts, achieving 85.3% extraction rate.
 
-**标签**: AI, Developer Tools, Stack Decisions, Claude
+**标签**: AI, Developer Tools, Claude, Benchmarking
 
 [阅读原文](https://amplifying.ai/research/claude-code-picks)
 
@@ -31,17 +31,41 @@
 
 ## 🔥 深度技术
 
-### 🟡 How my side project got banned from the internet
-**来源**: Lobste.rs | **评分**: 7.4/10
+### 🔴 Statement from Dario Amodei on our discussions with the Department of War
+**来源**: Hacker News | **评分**: 7.7/10
 
-**为什么重要**: This article exposes how fragile web reputation systems are and how a single false positive can cascade across 10+ security vendors, potentially destroying businesses that depend on web traffic.
+**为什么重要**: This reveals a high-stakes standoff between a leading AI company and the US military over ethical boundaries, with potential precedent-setting implications for how AI governance conflicts with national security demands.
 
 **要点**:
-• Google Safe Browsing cleared the flag in 2 hours, but 9 other vendors had already replicated it—demonstrating how security databases propagate errors virally without verification
-• Vendor resolution times varied dramatically: CRDF (1 day), BitDefender (3 days), alphaMountain.ai/Fortinet (4 days), CyRadar (6 days), Seclookup (8 days), Gridinsoft (16 days), with ESET and Lionic never responding
-• The root cause was a 302 temporary redirect (engramma.dev → app.engramma.dev) combined with a newly registered domain—a pattern security systems associate with malicious actors
+• Anthropic has been the first frontier AI company to deploy models in classified US government networks, National Laboratories, and provide custom models for national security, with Claude currently used for intelligence analysis, modeling/simulation, operational planning, and cyber operations
+• The company sacrificed 'several hundred million dollars in revenue' by cutting off CCP-linked firms and shutting down Chinese state-sponsored cyberattacks targeting Claude, demonstrating prior willingness to prioritize national security over profit
+• Two non-negotiable safeguards: (1) blocking mass domestic surveillance—which AI makes feasible at unprecedented scale by assembling scattered data (movements, browsing, associations) without warrants—and (2) prohibiting fully autonomous weapons due to current unreliability risks to warfighters and civilians
+
+[阅读原文](https://www.anthropic.com/news/statement-department-of-war)
+
+### 🟡 How my side project got banned from the internet
+**来源**: Lobste.rs | **评分**: 7.6/10
+
+**为什么重要**: False positive security flagging can silently destroy a project's reputation across dozens of vendors with no unified appeals process, and this article documents the hidden operational reality of fighting automated systems that businesses rarely discuss publicly.
+
+**要点**:
+• A simple 302 redirect from a new domain to a subdomain (engramma.dev → app.engramma.dev) triggered Google's 'Deceptive site ahead' warning, which then propagated to 10+ security vendors on VirusTotal
+• Resolution times varied dramatically by vendor: Google (2 hours), CRDF (1 day), BitDefender (3 days), alphaMountain.ai/Fortinet (4 days), CyRadar (6 days), Seclookup (8 days), Gridinsoft (16 days), with ESET and Lionic never responding
+• Vendor UX ranged from excellent (CRDF's no-account form) to Kafkaesque (Fortinet's automated system confirming its own false positive, CyRadar redirecting to Meta Messenger, Seclookup whitelisting github.com by accident)
 
 [阅读原文](https://trysound.io/how-my-side-project-got-banned-from-the-internet/)
+
+### 🟡 Making WebAssembly a first-class language on the Web
+**来源**: Lobste.rs | **评分**: 7.0/10
+
+**为什么重要**: This article reveals why WebAssembly—despite its technical maturity—remains underutilized by average developers, and how fixing its 'second-class' status on the web could democratize access to near-native performance.
+
+**要点**:
+• WebAssembly requires 15+ lines of boilerplate JavaScript (fetch, instantiateStreaming, imports) versus a single <script> tag for JavaScript, creating immediate friction for new developers
+• Accessing console.log from WebAssembly needs ~30 lines of binding code across JS and WASM modules, including manual memory management and string re-encoding, versus one line in JavaScript
+• The ESM integration proposal—already in Firefox and bundlers—enables direct WASM imports like `import { run } from '/module.wasm'` and `<script type='module' src='/module.wasm'>`, addressing loading friction
+
+[阅读原文](https://hacks.mozilla.org/2026/02/making-webassembly-a-first-class-language-on-the-web/)
 
 
 ---
@@ -50,9 +74,9 @@
 
 | 指标 | 数值 |
 |------|------|
-| 文章总数 | 2 篇 |
-| 平均质量分 | 7.9/10 |
-| 预计阅读时间 | 3 分钟 |
+| 文章总数 | 4 篇 |
+| 平均质量分 | 7.7/10 |
+| 预计阅读时间 | 6 分钟 |
 
 ---
 
